fix task filter, pwa app, income fix
